# labmail

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml  test.yml
src/labmail/: __init__.py  __main__.py  _env.py  gmail_api.py  text_utils.py
tests/: __init__.py  conftest.py  test__main__.py  test_gmail_api.py  test_text_utils.py
tests/testcases/text_utils/convert_text_to_html/: html_1.html  markdown_1.md
