[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labmail"
description = "Sends a message with your signature via Gmail"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
# keywords = []
# classifiers = []
dependencies = [
  "click~=8.1.7",
  "google-auth~=2.23.4",
  "google-auth-oauthlib~=1.1.0",
  "google-api-python-client~=2.109.0",
  "markdown~=3.5.1",
]
dynamic = ["version"]

[project.urls]
Documentation = ""
Homepage = "https://github.com/wasedatakeuchilab/labmail"

[project.scripts]
labmail = "labmail.__main__:main"

[tool.hatch.version]
path = "src/labmail/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-describe==2.1.0",
  "pytest-mock==3.12.0",
  "mypy==1.7.0",
  "google-api-python-client-stubs==1.20.1",
  "types-Markdown==3.5.0.1",
]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
# test-doc = "pytest --doctest-modules src"
check-type = "mypy src tests {args}"

[tool.hatch.envs.lint]
skip-install = true
dependencies = [
  "flake8==6.1.0",
  "isort==5.12.0",
  "black==23.11.0",
]

[tool.hatch.envs.lint.scripts]
format = [
  "isort src tests scripts",
  "black src tests scripts",
]
lint = [
  "isort --check-only src tests",
  "black --check src tests",
  "flake8 src tests",
]

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
  "google.*",
  "google_auth_oauthlib",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=labmail"
