[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labmail"
description = "Sends a message with your signature via Gmail"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
# keywords = []
# classifiers = []
dependencies = [
  "click~=8.1.7",
  "google-auth~=2.29.0",
  "google-auth-oauthlib~=1.2.0",
  "google-api-python-client~=2.132.0",
  "google-api-python-client-stubs~=1.25.0",
  "markdown~=3.6",
  "types-Markdown~=3.6.0.20240316",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wasedatakeuchilab/labmail"
Homepage = "https://github.com/wasedatakeuchilab/labmail"
Repository = "https://github.com/wasedatakeuchilab/labmail"

[project.optional-dependencies]
test = [
  "mypy==1.10.0",
  "pytest==8.1.1",
  "pytest-cov==5.0.0",
  "pytest-describe==2.2.0",
  "pytest-mock==3.14.0",
]

[project.scripts]
labmail = "labmail.__main__:main"

[tool.hatch.version]
path = "src/labmail/__init__.py"

[tool.hatch.envs.default]
features = ["test"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
# test-doc = "pytest --doctest-modules src"
check-type = "mypy src tests {args}"

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
  "google.*",
  "google_auth_oauthlib",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=labmail"

[tool.ruff]
lint.select = [
  "E",
  "F",
  "W",
  "I",
]
